@@ -44,7 +44,8 @@ deps =
 
     dj20: Django>=2.0,<2.1
     dj21: Django>=2.1,<2.2
-    dj22: git+https://github.com/django/django.git@stable/2.2.x#egg=Django
+    dj22: Django>=2.2,<2.3
+    dj22stable: git+https://github.com/django/django.git@stable/2.2.x#egg=Django
     djmaster: git+https://github.com/django/django.git@master#egg=Django
 
     postgres: psycopg2>=2.6
